--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "od-utility": "^1.4.3",
     "popper.js": "^1.14.7",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
+    "react-image-crop": "^8.0.5",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
