--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-image-crop": "^8.0.5",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^6.0.1",
