--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "od-utility": "^1.4.3",
     "popper.js": "^1.14.7",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-copy-to-clipboard": "^5.0.1",
     "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-scroll-top": "^0.1.1",
     "react-scripts": "2.1.8",
+    "react-tooltip": "^3.10.0",
     "react-window-size": "^1.2.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
