--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "alertifyjs": "^1.11.2",
     "body-scroll-lock": "^2.6.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "date-input-polyfill": "^2.14.0",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "lodash.merge": "^4.6.1",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "od-utility": "^1.4.3",
     "popper.js": "^1.14.7",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
+    "react-chartjs-2": "^2.7.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
